<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserGuideFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/i1"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="left"
            android:padding="10dp"
            android:text="Do's of Images"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/i2"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/high_quality"
                        android:scaleType="fitXY"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/i3"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="left"
            android:padding="10dp"
            android:text="Dont's for Images"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/i4"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/watermark"
                        android:scaleType="fitXY"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/i5"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/i6"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:src="@drawable/long_range_new"
                        android:scaleType="fitXY"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:src="@drawable/short_range"
                        android:scaleType="fitXY"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/i7"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>
    </ScrollView>
</FrameLayout>