<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MunduSiri">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp">
            <!--            android:layout_marginTop="10dp"-->
            <!--            android:layout_marginLeft="10dp"-->
            <!--            android:layout_marginRight="10dp"-->
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="10dp"
                android:src="@drawable/back_button"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bud Rot"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:src="@drawable/mundu_siri_image"
                        android:scaleType="fitXY"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="left"
            android:padding="10dp"
            android:text="Bud Rot"
            android:textColor="@color/black"
            android:textSize="24sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="left"
            android:padding="10dp"
            android:text="Symptoms"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:lineSpacingExtra="5sp"

            android:gravity="left"
            android:padding="10dp"
            android:text="@string/mundu_siri_symtoms"
            android:justificationMode="inter_word"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="left"
            android:padding="10dp"
            android:text="Remedies"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/app_background"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:lineSpacingExtra="5sp"
                    android:justificationMode="inter_word"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/mundu_siri1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/app_background"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:lineSpacingExtra="5sp"
                    android:justificationMode="inter_word"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/mundu_siri2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/app_background"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:lineSpacingExtra="5sp"
                    android:justificationMode="inter_word"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/mundu_siri3"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/app_background"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:lineSpacingExtra="5sp"
                    android:justificationMode="inter_word"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/mundu_siri4"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/app_background"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:lineSpacingExtra="5sp"
                    android:justificationMode="inter_word"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/mundu_siri5"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>